<resources>
    <string name="app_name">FoodApp-v1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="repetir_contrase_a">Repetir contraseña*</string>
    <string name="contrase_a">Contraseña*</string>
    <string name="correo_institucional">Correo institucional*</string>
    <string name="nombre">Nombre*</string>
    <string name="tel_fono">Teléfono*</string>
    <string name="crea_una_nueva_cuenta">Crea una nueva cuenta</string>
    <string name="reg_strate_ahora">Regístrate ahora</string>
    <string name="atr_s">Atrás</string>
    <string name="snack_s">Snack´s</string>
    <string name="icon">icon</string>
    <string name="hello_this_is_profile_fragment">HELLO THIS IS PROFILE FRAGMENT</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicia_sesi_n_para_continuar">Inicia sesión para continuar</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="qu_se_te_antoja_hoy">¿Qué se te antoja hoy?</string>
    <string name="platillos_populares">Platillos populares</string>
    <string name="hello_this_is_help_fragment">HELLO THIS IS HELP FRAGMENT</string>
    <string name="comida">Comida</string>
    <string name="carrito">Carrito</string>
    <string name="total">Total</string>
    <string name="ordenar">Ordenar</string>
    <string name="food_image">Food Image</string>
    <string name="informaci_n_de_la_comida">Información de la comida</string>
    <string name="nombre_del_platillo">Nombre del platillo</string>

</resources>