<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".fragments.Login_Fragment"
  >

    <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="350dp"
      android:layout_height="550dp"
      android:layout_gravity="center"
      android:padding="50dp"
      app:cardCornerRadius="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

            <ImageView
              android:contentDescription="@string/icon"
              android:id="@+id/logo"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginTop="25dp"
              android:src="@drawable/baseline_person_pin_24"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:tint="@color/primary_1" />

            <TextView
              android:id="@+id/welcome_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/bienvenido"
              android:textSize="25sp"
              android:textStyle="bold"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/logo" />

            <TextView
              android:id="@+id/helper_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/inicia_sesi_n_para_continuar"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

            <EditText
              android:autofillHints="emailAddress"
              android:id="@+id/email"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_margin="20dp"
              android:hint="@string/correo_institucional"
              android:inputType="textEmailAddress"
              android:selectAllOnFocus="true"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/helper_text" />

            <EditText
              android:autofillHints="password"
              android:id="@+id/password"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_margin="20dp"
              android:hint="@string/contrase_a"
              android:imeActionLabel="@string/action_sign_in_short"
              android:imeOptions="actionDone"
              android:inputType="textPassword"
              android:selectAllOnFocus="true"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="20dp"
              android:text="@string/olvidaste_tu_contrase_a"
              android:textColor="@color/primary_1"
              android:textStyle="bold"
              app:layout_constraintBottom_toTopOf="@+id/login"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
              android:textColor="@color/white"
              android:id="@+id/login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="70dp"
              android:backgroundTint="@color/primary_1"
              android:enabled="true"
              android:text="@string/iniciar_sesi_n"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/password" />

            <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/constraintLayout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/login">

                <TextView
                  android:id="@+id/textView3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/no_tienes_una_cuenta"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent" />

                <TextView
                  android:id="@+id/create_account"
                  android:layout_marginStart="5dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/crea_una_cuenta"
                  android:textColor="@color/primary_1"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toEndOf="@+id/textView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>