<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Cart_Fragment">

    <TextView
        android:id="@+id/title_cart_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_1"
        android:padding="@dimen/textview_padding"
        android:text="@string/carrito"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/title_cart_activity"
        android:layout_above="@id/dataContainer"
        android:id="@+id/recyclerView_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp" />

    <LinearLayout
        android:id="@+id/dataContainer"
        android:layout_above="@id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:orientation="vertical"
        android:layout_marginHorizontal="30sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="6sp"
                android:text="@string/comida"/>

            <TextView
                android:gravity="end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="6sp"
                android:text="$$$"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="6sp"
                android:text="@string/comida"/>

            <TextView
                android:gravity="end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="6sp"
                android:text="$$$"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="6sp"
                android:text="@string/total"/>

            <TextView
                android:gravity="end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="6sp"
                android:text="$$$"/>

        </LinearLayout>


    </LinearLayout>
    
    <Button
        android:id="@+id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/search_input"
        android:backgroundTint="@color/primary_1"
        android:foregroundGravity="bottom"
        android:text="Ordenar"
        android:textColor="@color/white"
        app:cardCornerRadius="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ordenar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
</RelativeLayout>